Trying to remove the code smells.
Trying to remove the code smells.